# EverVox

./: .gitignore  CONTEXT.md  Cargo.toml  LICENSE  README.md
.githooks/: pre-commit  pre-push
.github/workflows/: auto-merge.yml  ci.yml  release.yml
apt/: InRelease  Packages  Release  Release.gpg  evervox.gpg  evervox_0.1.10-1_amd64.deb  evervox_0.1.11-1_amd64.deb  evervox_0.1.7-1_amd64.deb  evervox_0.1.9-1_amd64.deb
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: audio.rs  clipboard.rs  config.rs  engine_cloud.rs  engine_whisper.rs  entrega.rs  foco.rs  limpeza.rs  main.rs  microfone.rs  modelo.rs  wav.rs  xdg.rs
crates/segredo/: Cargo.toml
crates/segredo/src/: lib.rs
docs/adr/: 0001-entrega-via-clipboard-e-colar.md  0002-stack-rust.md  0003-traducao-etapa-separada-chamada-fundida.md  0004-preferencias-na-extensao-gnome.md
gnome-extension/: aplicativo_preferencias.js  atalho.js  extension.js  metadata.json  preferencias_ui.js  prefs.js  stylesheet.css
gnome-extension/tests/: atalho.test.js
packaging/: evervox.desktop  evervox.metainfo.xml  evervox.service  pos-instalar.sh  preferencias.sh
packaging/debian/: postinst  postrm  prerm
scripts/: e2e-fixture.py  e2e-teclas.py  e2e.sh  empacotar-deb.sh  instalar.sh  publicar-apt.sh
