[workspace]
resolver = "2"
members = ["crates/core", "crates/daemon", "crates/cli"]

[workspace.dependencies]
zbus = { version = "5", default-features = false, features = ["tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
notify-rust = { version = "4", default-features = false, features = ["z-with-tokio"] }
anyhow = "1"
cpal = "0.15"
hound = "3.5"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
whisper-rs = "0.16"
uinput = { version = "0.1", default-features = false }
