[package]
name = "evervox-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "evervox"
path = "src/main.rs"

[dependencies]
evervox-core = { path = "../core" }
evervox-segredo = { path = "../segredo" }
zbus = { workspace = true }
tokio = { workspace = true }
notify-rust = { workspace = true }
anyhow = { workspace = true }
rpassword = { workspace = true }
