[package]
name = "evervox-daemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "evervox-daemon"
path = "src/main.rs"

[dependencies]
evervox-core = { path = "../core" }
zbus = { workspace = true }
tokio = { workspace = true }
notify-rust = { workspace = true }
anyhow = { workspace = true }
cpal = { workspace = true }
hound = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
reqwest = { workspace = true }
whisper-rs = { workspace = true }
uinput = { workspace = true }
